--- a/index.html
+++ b/index.html
@@ -1,110 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bunny Plugins - GitHub Pages</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
-    <style>
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background: #f9f9f9;
-            color: #232323;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #ffb347;
-            color: #fff;
-            padding: 2rem 0 1.5rem 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            font-weight: 700;
-        }
-        header p {
-            font-size: 1.2rem;
-            margin-top: 0.5rem;
-        }
-        main {
-            max-width: 800px;
-            margin: 2rem auto;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-            padding: 2rem;
-        }
-        section {
-            margin-bottom: 2rem;
-        }
-        h2 {
-            color: #ffb347;
-            font-size: 1.5rem;
-            margin-top: 0;
-        }
-        ul {
-            padding-left: 1.2rem;
-        }
-        a {
-            color: #ff9800;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            padding: 1.5rem 0;
-            background: #f1f1f1;
-            font-size: 0.95rem;
-            color: #888;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>bunny-plugins por mnklak</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1e1e1e;
+      color: #f5f5f5;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #00bfff;
+    }
+    a {
+      color: #00ff99;
+      text-decoration: none;
+    }
+    .note {
+      background-color: #333;
+      padding: 1rem;
+      border-left: 5px solid #00bfff;
+      margin-bottom: 2rem;
+    }
+    .plugin-link {
+      display: block;
+      margin: 0.5rem 0;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Bunny Plugins</h1>
-        <p>Bem-vindo ao repositório de plugins do Bunny! Explore, contribua e aprenda.</p>
-    </header>
-    <main>
-        <section>
-            <h2>Sobre o Projeto</h2>
-            <p>
-                Este repositório contém plugins e extensões para o Bunny, pensados para facilitar integrações e adicionar novas funcionalidades.
-            </p>
-        </section>
-        <section>
-            <h2>Recursos Principais</h2>
-            <ul>
-                <li>Lista de plugins prontos para uso</li>
-                <li>Tutoriais para instalação e configuração</li>
-                <li>Documentação de APIs e exemplos</li>
-                <li>Comunidade ativa para suporte</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Como Contribuir</h2>
-            <p>
-                Sinta-se livre para abrir <a href="https://github.com/mnklak/bunny-plugins/issues">issues</a> ou enviar <a href="https://github.com/mnklak/bunny-plugins/pulls">pull requests</a> com melhorias.
-                Veja o <a href="https://github.com/mnklak/bunny-plugins/blob/main/CONTRIBUTING.md">guia de contribuição</a> para detalhes.
-            </p>
-        </section>
-        <section>
-            <h2>Links Úteis</h2>
-            <ul>
-                <li>
-                    <a href="https://github.com/mnklak/bunny-plugins" target="_blank">Repositório no GitHub</a>
-                </li>
-                <li>
-                    <a href="https://github.com/mnklak/bunny-plugins#readme" target="_blank">Documentação</a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        &copy; 2025 Bunny Plugins - Desenvolvido por <a href="https://github.com/mnklak" target="_blank">mnklak</a>
-    </footer>
+
+  <h1>🐰 bunny-plugins</h1>
+  <p>Repositório de plugins personalizados para Bunny e Revenge, criado por <strong>mnklak</strong>.</p>
+
+  <div class="note">
+    <strong>Nota:</strong> Se você clicou em um link de plugin e recebeu erro 404, copie o endereço do link e cole diretamente no Bunny ou Revenge como URL de plugin.
+  </div>
+
+  <h2>📦 Plugins disponíveis</h2>
+  <p>Adicione os plugins abaixo copiando o link e colando no seu cliente modificado:</p>
+
+  <a class="plugin-link" href="https://mnklak.github.io/bunny-plugins/UCR/plugin.js" target="_blank">🔧 UCR — Ultimate Custom Banner Changer</a>
+  <!-- Adicione mais plugins aqui conforme for criando -->
+
+  <h2>📘 Sobre o projeto</h2>
+  <p>Este repositório contém plugins que permitem personalizações visuais no Discord, como banners locais sem Nitro. Compatível com Bunny e Revenge.</p>
+
+  <h2>🔗 Links úteis</h2>
+  <ul>
+    <li><a href="https://github.com/mnklak/bunny-plugins" target="_blank">Repositório no GitHub</a></li>
+    <li><a href="https://mnklak.github.io/bunny-plugins/manifest.json" target="_blank">Manifesto do Plugin</a></li>
+  </ul>
+
 </body>
 </html>
